:ambulance: Images not showing: fixed

--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ body {
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin: 2em 0;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
